k8s-canary-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cart-api
  labels:
    name: cart-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-api-stable
  namespace: cart-api
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: cart-api
      track: stable
  template:
    metadata:
      labels:
        app: cart-api
        track: stable
    spec:
      containers:
      - name: cart-api
        image: yecid07/cart-api:1.0.0-stable
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cart-api-stable-svc
  namespace: cart-api
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: cart-api
    track: stable
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-api-canary
  namespace: cart-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-api
      track: canary
  template:
    metadata:
      labels:
        app: cart-api
        track: canary
    spec:
      containers:
      - name: cart-api
        image: yecid07/cart-api:1.1.0-canary
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: cart-api-canary-svc
  namespace: cart-api
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: cart-api
    track: canary
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-api-ingress
  namespace: cart-api
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cart-api-stable-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cart-api-ingress-canary
  namespace: cart-api
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cart-api-canary-svc
            port:
              number: 80
